--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -3,10 +3,11 @@ html {
 }
 
 body {
-  background-image: linear-gradient(blue,purple);
+  /*background-image: linear-gradient(blue,purple);*/
   background-repeat: no-repeat;
   font-size: 1.6rem;
   font-family: Arial, Helvetica, sans-serif;
+  background-color: #4915f8;
 }
 
 .banner {
@@ -45,14 +46,23 @@ button {
 
 .mission {
   display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.mission--text {
+  display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-  background-image: url("../images/picture-1.gif");
-  background-repeat: no-repeat;
-  background-position: right;
-  padding: 20rem 3rem;
-  height: 100%;
+  justify-content: center;
+  
+}
+
+.mission--img {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
 }
 
 h1 {
